# py-clue

./: .coveragerc  .gitattributes  .gitignore  README.md  clue_pb2.py  pytest.default.ini  requirements-test.txt  setup.cfg  setup.py
docs/: clue.rst  conf.py  connection.rst  index.rst  installation.rst  introduction.rst  pyclue.rst  stream.rst  tutorial.rst
pyclue/: __init__.py  connection.py  stream.py
pyclue/features/: __init__.py  cohort.py  comparison.py  converter.py  incidence_rate.py
pyclue/interceptors/: auth.py  base.py
pyclue/pb/: clue_pb2.py  clue_pb2_grpc.py
tests/: conftest.py  test_cohort.py  test_comparison.py  test_connection.py  test_incidence_rate.py
