[metadata]
name = python-clue
version = 0.1.0
# this doesn't work!! (attr: pyclue.__version__)
description = Python interface to the MDwalks CLUE.
author = Linewalks
author_email = jungwoo@linewalks.com
url = https://github.com/linewalks/py-clue
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = pyclue
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = 
    pyclue
    pyclue.*
